Update document to Chinese version
